# mpi-k8s

./: README.md
BDAS/: CMakeLists.txt  Dockerfile  LICENSE  Makefile  about.md  bdas.yaml
BDAS/src/: princomp.cpp
LAMMPS/: Dockerfile  lammps.yaml
autodock/: .Dockerfile.swp  .gitignore  Dockerfile  autodock.yaml
dgemm/: Dockerfile  Makefile  dgemm-depl.yaml  dgemm-pod.yaml  dgemm-time.yaml  dgemm.yaml  mt-dgemm.c  policy-depl.yaml
miniAMR/: Dockerfile  miniamr-mpi.yaml  miniamr.yaml
miniAMR/openmp/: Makefile  driver.c  ma.x
miniAMR/ref/: Dockerfile
pic/: Dockerfile
pic/sputniPIC-teach/: RW_IO.h
pic/sputniPIC-teach/data/: Bx_10.spic  Bx_20.spic  By_10.spic  By_20.spic  Bz_10.spic  Bz_20.spic  Ex_10.spic  Ex_20.spic  Ey_10.spic  Ey_20.spic  Ez_10.spic  Ez_20.spic  Jx_e__10.spic  Jx_e__20.spic  Jx_i_10.spic  Jx_i_20.spic  Jy_e_10.spic  Jy_e_20.spic  Jy_i_10.spic  Jy_i_20.spic  Jz_e_10.spic  Jz_e_20.spic  Jz_i_10.spic  Jz_i_20.spic  rho_e_10.spic  rho_e_20.spic  rho_i_10.spic  rho_i_20.spic
pic/sputniPIC-teach/inputfiles/: GEM_2D_airflow.inp
sigwatcher/: Dockerfile  how_to_run.txt  policy.yaml  sigterm.yaml  sigtermcopy.yaml  test_sighandler.c
stream/: Dockerfile  Makefile  forwardgraf.sh  ingress.yaml  init-cluster.sh  persistentVolume.yaml  policy-depl.yaml  policy.yaml  pvclaim.yaml  stream-depl.yaml  stream-old-old.yaml  stream-old.yaml  stream-orig.c  stream-single.txt  stream-time.yaml  stream-times  stream.c  stream.yaml  stream_mpi.c  test_sighandler.c  values.yaml
stream-jaeger/: CMakeLists.txt  Dockerfile  stream.cpp  stream.yaml
